<resources>
    <string name="app_name">Smartiquin</string>
    <string name="switchShake">Abrir/Cerrar agitando</string>
    <string name="textViewBotiquin">Botiquin</string>
    <string name="btnMeds">Registro Medicamentos</string>
    <string name="btnAgregar">Agregar Medicamento</string>
    <string name="textViewMedicamentos">Medicamentos</string>
    <string name="tilNombreMed">Nombre</string>
    <string name="tilLabMed">Laboratorio</string>
    <string name="tilVencMed">Fecha de Vencimiento</string>
    <string name="tilMedInic">Cantidad de Medicamentos</string>
    <string name="tilAlertaMed">Cantidad Minima</string>
    <string name="tilHoraAlerta">Hora de alerta</string>
    <string name="rbtnDia">Dia</string>
    <string name="rbtnNoche">Noche</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnAgregarPastillas">Ingresar Pastillas</string>
    <string name="btnEliminar">Eliminar Medicamento</string>
    <string name="textViewSwitch">Posicion</string>
    <string name="textViewRegistro">Registro de Medicamento</string>
    <string name="btnConectarArduino">Conectar con Botiquin</string>

    <string-array name="switch_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
